# fcitx-ui-light

./: CMakeLists.txt  INSTALL  README
data/: CMakeLists.txt  fcitx-light-ui.conf.in  fcitx-light-ui.desc  fcitx-light.desktop.in
po/: CMakeLists.txt  POTFILES.in.in  zh_CN.po
src/: CMakeLists.txt  InputWindow.c  InputWindow.h  MainWindow.c  MainWindow.h  MenuWindow.c  MenuWindow.h  MessageWindow.c  MessageWindow.h  TrayWindow.c  TrayWindow.h  font.c  font.h  lightui.c  lightui.h  lightuiconfig.c  skin.c  skin.h  tray.c
xpm/: active.xpm  bingchan.xpm  cangjie.xpm  chttrans_active.xpm  chttrans_inactive.xpm  cn.xpm  dianbaoma.xpm  en.xpm  erbi.xpm  fullwidth_active.xpm  fullwidth_inactive.xpm  inactive.xpm  logo.xpm  next.xpm  pinyin.xpm  prev.xpm  punc_active.xpm  punc_inactive.xpm  quwei.xpm  remind_active.xpm  remind_inactive.xpm  shuangpin.xpm  vk_active.xpm  vk_inactive.xpm  wanfeng.xpm  wbpy.xpm  wubi.xpm  ziranma.xpm
